# AWARE

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  query.json  sitemap.xml
agents/: __init__.py  base.py  executor_agent.py  parser_agent.py
architecture/: index.html
aware_models/: __init__.py  buildspec.py  executor.py
cli/: main.py
configuration/: index.html
credits/: index.html
docs/: architecture.md  configuration.md  credits.md  getting-started.md  index.md  license.md  outputs.md  support.md  ui.md  usage.md
getting-started/: index.html
knowledge/: executor_rca_kb.md  parser_buildspec_kb.md
license/: index.html
llm/: __init__.py  base.py  factory.py  litellm_client.py  mock.py  openai_compatible.py  schemas.py
models/: __init__.py  executor.py
outputs/: index.html
runtime/: agent_factory.py  env.py  knowledge_db.py  output_store.py  reporting.py
search/: search_index.json
support/: index.html
templates/: __init__.py  assess_templates.py
tests/: test_buildspec_validation.py  test_env.py  test_executor_agent.py  test_knowledge_db.py  test_output_store.py  test_parser_agent.py  test_reporting.py  test_telemetry_tools.py  test_time_tools.py  test_ui.py
tools/: __init__.py  telemetry_tools.py  time_tools.py
ui/: index.html  server.py
usage/: index.html
